~~~ Version 1.1.8rc
* Fixed the getattr bug (we were just getting the attr from the openfile
handle and not getting it from the Container as well).  This made the size
reasonable but the permissions/ownership/everthing else were garbage).
* fixed ADIO parse conf error.  Now a good error is reported when the 
conf file is bad or the file path is bad.
* added global_summary_dir to the plfsrc
* fixed tools/plfs_flatten_index which broke due to the stop_buffering
thing we put into the Index to stop buffering when memory is exhausted.
the buffering is so everyone retains their write index in memory to do
the flatten on close in ADIO

~~~ Version 1.1.7
Fixed a bug in rename.

~~~ Version 1.1.6
Added support for a statfs override in the plfsrc file 
in response to ticket 35609.

~~~ Version 1.1.5
Bug fix for symbolic links.  I swear this is the second time I fixed this bug

~~~ Version 1.1.4
Bug fix in the multiple mount point parsing (unitialized string pointer)

~~~ Version 1.1.3
Added the multiple mount point parsing in plfsrc

~~~ Version 1.1.2
Index flattening in ADIO close for write

~~~ Version 1.1.1
Index broadcast in ADIO open for read

~~~ Version 1.0.0.0pre.0.C

No new features or performance engineering.  Just bug fixes.
All the bug fixes we've made since the last release:

31207 unlink non-atomic right now resolved  plfs  adamm 0
johnbent@lanl.gov 2 weeks ago   8 days ago  0
- We now rename the container to a hidden path before unlinking since
the recursive unlink over a container is not atomic.

31236 reproducible rename bug resolved  plfs  Nobody  0
johnbent@lanl.gov 2 weeks ago   2 weeks ago 0
- Simple bug in rename.  PLFS has to remove a container in the destination
spot before doing a rename since the rename system call can clobber an
existing file but not an existing directory.  So if the user wants to rename
over an existing PLFS file, we have to remove the container first.  We had
a bug where we were removing the src instead of the dest.
